--- a/.github/workflows/ha-config-test.yml
+++ b/.github/workflows/ha-config-test.yml
@@ -3,7 +3,9 @@ name: Home Assistant CI
 
 # yamllint disable-line rule:truthy
 on:
-  commit:
+  push:
+  pull_request:
+    branches: [master, main]
 
 jobs:
   yamllint:
