--- a/.github/workflows/ha-config-test.yml
+++ b/.github/workflows/ha-config-test.yml
@@ -8,33 +8,31 @@ on:
     branches: [master, main]
 
 jobs:
-  yamllint:
-    name: 🧹 yamllint
-    runs-on: ubuntu-latest
-    steps:
-      - name: ⤵️ Check out configuration from GitHub
-        uses: actions/checkout@v3.0.2
-      - name: 🚀 Run yamllint
-        uses: frenck/action-yamllint@v1.2.0
+  #yamllint:
+  #  name: 🧹 yamllint
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - name: ⤵️ Check out configuration from GitHub
+  #      uses: actions/checkout@v3.0.2
+  #    - name: 🚀 Run yamllint
+  #      uses: frenck/action-yamllint@v1.2.0
+  #      continue-on-error: true
 
-  remarklint:
-    runs-on: ubuntu-18.04
-    steps:
-      - name: ⤵️ Check out configuration from GitHub
-        uses: actions/checkout@v3.0.2
-      - name: Running Remark lint
-        uses: "docker://pipelinecomponents/remark-lint:latest"
-        continue-on-error: true
-        with:
-          args: "remark --no-stdout --color --frail --use preset-lint-recommended ."
+  #remarklint:
+  #  runs-on: ubuntu-18.04
+  #  steps:
+  #    - name: ⤵️ Check out configuration from GitHub
+  #      uses: actions/checkout@v3.0.2
+  #    - name: Running Remark lint
+  #      uses: "docker://pipelinecomponents/remark-lint:latest"
+  #      continue-on-error: true
+  #      with:
+  #        args: "remark --no-stdout --color --frail --use preset-lint-recommended ."
 
   home-assistant:
     name: "Home Assistant Core ${{ matrix.version }} Configuration Check"
-    needs: [yamllint]
+    #needs: [yamllint]
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        version: ["stable", "beta"]
     steps:
       - name: ⤵️ Check out configuration from GitHub
         uses: actions/checkout@v3.0.2
@@ -43,4 +41,4 @@ jobs:
         with:
           path: "."
           secrets: ./secrets.fake.yaml
-          version: "${{ matrix.version }}"
+          version: "beta"
