--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -48,7 +48,7 @@ jobs:
           VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Validates all source when push on main, else just the git diff with main. Override with true if you always want to lint all sources
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DISABLE_LINTERS: REPOSITORY_SEMGREP
-          DISABLE_ERRORS_LINTERS: SPELL_CSPELL
+          DISABLE_ERRORS_LINTERS: SPELL_CSPELL,REPOSITORY_DEVSKIM
 
       # Upload MegaLinter artifacts
       - name: Archive production artifacts
