fix path in github action for ha config test

--- a/.github/workflows/ha-config-test.yml
+++ b/.github/workflows/ha-config-test.yml
@@ -42,10 +42,10 @@ jobs:
         uses: actions/checkout@v3.0.2
       - name: Rename Dummy files to productive files
         run: |
-            mv ./dummy_files/Homeassistant-SmartLife-Dummy.json Homeassistant-SmartLife-f9d43c517637.json
-            mv ./dummy_files/custom_components_dummy.yaml custom_components.yaml
-            mv ./dummy_files/switch_dummy.yaml switch.yaml
-            mv ./dummy_files/sensor_dummy.yaml sensor.yaml
+            mv dummy_files/Homeassistant-SmartLife-Dummy.json Homeassistant-SmartLife-f9d43c517637.json
+            mv dummy_files/custom_components_dummy.yaml custom_components.yaml
+            mv dummy_files/switch_dummy.yaml switch.yaml
+            mv dummy_files/sensor_dummy.yaml sensor.yaml
             mkdir -p ./share/scripts
             mkdir -p ./media/netboot
             ln -s /share ./share
