--- a/.github/workflows/ha-config-test.yml
+++ b/.github/workflows/ha-config-test.yml
@@ -43,9 +43,9 @@ jobs:
       - name: Rename Dummy files for action usage
         run: |
             mv -f dummy_files/custom_components_dummy.yaml custom_components.yaml
-            mv -f dummy_files/switch_dummy.yaml switch.yaml
-            mv -f dummy_files/sensor_dummy.yaml sensor.yaml
             mv -f dummy_files/Homeassistant-SmartLife-Dummy.json Homeassistant-SmartLife-f9d43c517637.json
+            rm -r switch/switch_custom_components.yaml
+            rm -r sensor/sensor_custom_components.yaml
       - name: 🚀 Run Home Assistant Configuration Check
         uses: frenck/action-home-assistant@v1.3
         with:
