--- a/.github/workflows/ha-config-test.yml
+++ b/.github/workflows/ha-config-test.yml
@@ -46,6 +46,7 @@ jobs:
             mv -f dummy_files/Homeassistant-SmartLife-Dummy.json Homeassistant-SmartLife-f9d43c517637.json
             rm -r switch/switch_custom_components.yaml
             rm -r sensor/sensor_custom_components.yaml
+            rm -r light/light_custom_components.yaml
       - name: 🚀 Run Home Assistant Configuration Check
         uses: frenck/action-home-assistant@v1.3
         with:
