exclude dummy files from workflow

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -49,8 +49,9 @@
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             DISABLE_LINTERS: REPOSITORY_SEMGREP
             DISABLE_ERRORS_LINTERS: REPOSITORY_DEVSKIM,SPELL_CSPELL
-            EXCLUDED_DIRECTORIES: .github/workflows/
-            FILTER_REGEX_EXCLUDE: (Homeassistant-Smartlife-Dummy*)
+            EXCLUDED_DIRECTORIES:
+              - .github/workflows/
+              - dummy_files/
 
         # Upload MegaLinter artifacts
         - name: Archive production artifacts
