--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 !automation/
 !device_tracker/
 !notify/
+!.github/
+!.github/workflows/
+!.github/workflows/automerge-dependabot.yml
 
 # Ignore folders.
 megalinter-reports/
