--- a/.github/workflows/ha-config-test.yml
+++ b/.github/workflows/ha-config-test.yml
@@ -44,11 +44,11 @@ jobs:
         run: |
             mv -f dummy_files/custom_components_dummy.yaml custom_components.yaml
             mv -f dummy_files/Homeassistant-SmartLife-Dummy.json Homeassistant_google_assistant.json
-            rm -r switch/switch_custom_components.yaml
-            rm -r sensor/sensor_custom_components.yaml
-            rm -r light/light_custom_components.yaml
-            rm -r notify/notify_custom_components.yaml
-            rm -r device_tracker/device_tracker_custom_components.yaml
+            rm -r -f switch/switch_custom_components.yaml
+            rm -r -f sensor/sensor_custom_components.yaml
+            rm -r -f light/light_custom_components.yaml
+            rm -r -f notify/notify_custom_components.yaml
+            rm -r -f device_tracker/device_tracker_custom_components.yaml
             sed -n '/## Custom Components/q;p' < configuration.yaml > configuration.yaml
 
       - name: 🚀 Run Home Assistant Configuration Check
