improved media player mute automation

--- a/secrets.fake.yaml
+++ b/secrets.fake.yaml
@@ -1,6 +1,7 @@
 ---
 # Use this file to store secrets like usernames and passwords.
 # Learn more at https://home-assistant.io/docs/configuration/secrets/
+system_bridge_fabian: "fake"
 http_password: secrets.fake.yaml
 default: secrets.fake.yaml
 defaultmail: secrets.fake.yaml
